grammar.js
    source_file: $ => seq(
      optional("HA"),
      optional($.export_header),
      choice(
        $.class_file,
        $.structure_file,
        $.function_file,
      ),
    ),

    class_file: $ => seq(
      $.forward_declaration_section,
      repeat($.structure_definition),
      optional($.shared_variables_section),
      optional($.global_variables_section),
      $.class_type_definition,
      optional($.global_var_declaration),
      optional($.external_function_prototypes),
      optional($.instance_variables_section),
      optional($.forward_function_prototypes),
      repeat(choice(
        $.event_definition,
        $.function_definition,
        $.on_event_definition,
      )),
      repeat($.inner_class_type_definition),
    ),

    forward_declaration_section: $ => seq(
      alias($.forward_keyword, $.forward_declaration_statement),
      $.forward_declaration_statement_body,
      $.forward_declaration_statement_end,
    ),

    forward_declaration_statement_body: $ => seq(
      repeat1($.class_type_definition),
      repeat($.global_variable_declaration),
    ),

    class_type_definition: $ => seq(
      $.class_type_definition_statement,
      optional($.class_type_definition_statement_body),
      $.end_type_declaration_statement,
    ),

    class_type_definition_statement: $ => seq(
      optional($.global_keyword),
      $.type_keyword,
      alias($.identifier, $.class_type_name),
      $.from_keyword,
      alias($.identifier, $.ancenstor_type_name),
      optional($.autoinstantiate_keyword),
      optional(seq(
        $.within_keyword,
        alias($.identifier, $.parent_class),
        optional(seq(
          $.descriptor_keyword,
          alias($.string_literal, $.descriptor_type),
          "=",
          alias($.string_literal, $.descriptor_value),
        )),
      )),
    ),

    class_type_definition_statement_body: $ => repeat1(choice(
      $.event_declaration,
      alias($.local_variable_declaration, $.inner_class_variable_declaration),
    )),

    forward_declaration_statement_end: $ => seq(
      $.end_keyword,
      $.forward_keyword,
    ),

    global_var_declaration: $ => seq(
      $.global_keyword,
      $.type,
      alias($.identifier, $.global_variable_name),
    ),

    on_event_definition: $ => seq(
      $.on_event_definition_statement,
      optional(alias($.scriptable_block, $.on_event_definition_block)),
      $.on_event_definition_statement_end,
    ),

    on_event_definition_statement: $ => seq(
      $.on_keyword,
      alias($.identifier, $.class_name),
      ".",
      choice($.create_keyword, $.destroy_keyword)
    ),

    on_event_definition_statement_end: $ => seq($.end_keyword, $.on_keyword),

    end_type_declaration_statement: $ => seq($.end_keyword, $.type_keyword),

    function_prototype: $ => choice(
      $._function_prototype,
      $._subroutine_prototype,
    ),

    _function_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.function_keyword,
      alias($.type, $.return_type),
      alias($.identifier, $.function_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    _subroutine_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.subroutine_keyword,
      alias($.identifier, $.subroutine_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    function_definition: $ => choice(
      $._function_definition,
      $._subroutine_definition,
    ),

    _function_definition: $ => seq(
      $.function_definition_statement,
      optional(alias($.scriptable_block, $.function_definition_block)),
      $.function_definition_statement_end,
    ),

    _subroutine_definition: $ => seq(
      $.subroutine_definition_statement,
      optional(alias($.scriptable_block, $.subroutine_definition_block)),
      $.subroutine_definition_statement_end,
    ),

    subroutine_definition_statement: $ => seq($._subroutine_prototype, $.statement_separation),

    subroutine_definition_statement_end: $ => seq($.end_keyword, $.subroutine_keyword),

    parameter_list: $ => seq($.open_parenthesis, commaSep($.parameter), $.close_parenthesis),

    parameter: $ => seq(
      optional(alias(choice(
        $.ref_keyword,
        $.readonly_keyword,
      ), $.parameter_pass_by_type)),
      $.type,
      alias($.identifier, $.parameter_name),
      optional($.array_parameter_declaration_suffix),
    ),

    array_parameter_declaration_suffix: $ => seq($.open_brackets, $.close_brackets),

    access_modifier: $ => choice(
      $.public_keyword,
      $.private_keyword,
      $.protected_keyword,
    ),

    statement: $ => choice(
      $.choose_statement,
      $.do_loop,
      $.for_loop,
      $.goto_label,
      $.if_statement,
      $.inline_if_statement,
      $.local_variable_declaration_statement,
      $.try_catch_statement,
      $.while_loop,
      $.inline_statement,
      /*
      $.sql_statement, TODO
      */
    ),

    inline_statement: $ => choice(
      $.assignment_statement,
      $.call_statement,
      $.continue_statement,
      $.create_statement,
      $.destroy_statement,
      $.exit_statement,
      $.goto_statement,
      $.halt_statement,
      $.return_statement,
      $.throw_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      alias($.expression, $.l_value),
      "=",
      alias($.expression, $.r_value),
    ),

    call_statement: $ => seq(
      $.call_keyword,
      alias($.expression, $.ancestor_name),
      optional(seq('`', alias($.identifier, $.control_name))),
      "::",
      alias($.identifier, $.event_name),
    ),

    expression_statement: $ => seq(
      choice(
        $.method_invocation,
        $.update_expression,
      ),
    ),

    method_invocation: $ => seq(
      optional(alias(choice($.expression), $.method_object)),
      optional(alias(choice(".", "::"), $.operator)),
      optional(alias(choice($.function_keyword, $.event_keyword), $.method_type)),
      optional(alias(choice($.static_keyword, $.dynamic_keyword), $.call_type)),
      optional(alias(choice($.trigger_keyword, $.post_keyword), $.when_type)),
      alias($.identifier, $.method_name),
      $.argument_list,
    ),

    argument_list: $ => seq(
      $.open_parenthesis,
      commaSep(seq(optional($.ref_keyword), $.expression)),
      $.close_parenthesis,
    ),

    type: $ => choice(
      $.primitive_type,
      $.identifier,
    ),

    string_literal: $ => choice(
      seq($.double_quote, alias(repeat(token.immediate(prec(1, choice(/[^"\\]/, /\\./, /~"/)))), $.string_content), $.double_quote),
      seq($.single_quote, alias(repeat(token.immediate(prec(1, choice(/[^'\\]/, /\\./, /~'/)))), $.string_content), $.single_quote),
    ),

    primitive_type: _ => choice(
      caseInsensitiveAlias("blob"),
      caseInsensitiveAlias("boolean"),
      caseInsensitiveAlias("byte"),
      caseInsensitiveAlias("char"),
      caseInsensitiveAlias("character"),
      caseInsensitiveAlias("date"),
      caseInsensitiveAlias("datetime"),
      caseInsensitiveAlias("decimal"),
      caseInsensitiveAlias("dec"),
      caseInsensitiveAlias("double"),
      caseInsensitiveAlias("integer"),
      caseInsensitiveAlias("int"),
      caseInsensitiveAlias("longlong"),
      caseInsensitiveAlias("long"),
      caseInsensitiveAlias("real"),
      caseInsensitiveAlias("string"),
      caseInsensitiveAlias("time"),
      caseInsensitiveAlias("unsignedinteger"),
      caseInsensitiveAlias("unsignedint"),
      caseInsensitiveAlias("uint"),
      caseInsensitiveAlias("unsignedlong"),
      caseInsensitiveAlias("ulong"),
      caseInsensitiveAlias("any"),
    ),

    open_parenthesis: _ => "(",
    close_parenthesis: _ => ")",
    open_brackets: _ => "[",
    close_brackets: _ => "]",
    single_quote: _ => "\'",
    double_quote: _ => "\"",
    statement_separation: _ => ";",

    public_keyword: _ => reservedWord("public"),
    call_keyword: _ => reservedWord("call"),
    create_keyword: _ => reservedWord("create"),
    destroy_keyword: _ => reservedWord("destroy"),
    end_keyword: _ => reservedWord("end"),
    forward_keyword: _ => reservedWord("forward"),
    from_keyword: _ => reservedWord("from"),
    function_keyword: _ => reservedWord("function"),
    global_keyword: _ => reservedWord("global"),
    native_keyword: _ => reservedWord("native"),
    on_keyword: _ => reservedWord("on"),
    subroutine_keyword: _ => reservedWord("subroutine"),
    super_keyword: _ => reservedWord("super"),
    this_keyword: _ => reservedWord("this"),
    type_keyword: _ => reservedWord("type"),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9\-_$#%]*/,
